<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightGreen"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageButton
            android:id="@+id/BackButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="#00FFFFFF"
            android:contextClickable="false"
            tools:src="@drawable/smallerhomebutton"
            android:contentDescription="@string/home_button_txt_des" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/textViewHealth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/dotgothic16"
            android:padding="5dp"
            android:text="@string/health_text"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textViewHP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="35dp"
            android:fontFamily="@font/dotgothic16"
            android:padding="5dp"
            android:text="@string/health_percentage"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textViewHapiness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/dotgothic16"
            android:padding="5dp"
            android:text="@string/happiness_text"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textViewHapPer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/dotgothic16"
            android:padding="5dp"
            android:text="@string/hap_percentage"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/PetImage"
            android:layout_width="400dp"
            android:layout_height="match_parent"
            android:src="@tools:sample/avatars"
            app:srcCompat="@drawable/biggeregg"
            android:contentDescription="@string/pet_txt_des" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageButton
            android:id="@+id/LoveButton"
            android:layout_width="75dp"
            android:layout_height="109dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            tools:src="@drawable/lovebutton2"
            android:contentDescription="@string/love_buttonfeed_button_txt_des" />

        <ImageButton
            android:id="@+id/FeedButton"
            android:layout_width="75dp"
            android:layout_height="109dp"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:src="@drawable/feedbutton"
            android:contentDescription="@string/feed_button_txt_des" />

        <ImageButton
            android:id="@+id/CleanButton"
            android:layout_width="75dp"
            android:layout_height="109dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:src="@drawable/cleanbutton"
            android:contentDescription="@string/clean_button_txt_des" />

        <ImageButton
            android:id="@+id/PlayButton"
            android:layout_width="75dp"
            android:layout_height="109dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:src="@drawable/playbutton"
            android:contentDescription="@string/play_buttonfeed_button_txt_des" />

    </LinearLayout>

</LinearLayout>